Se agregan formularios para campos requeridos

--- a/public/index/index.handlebars
+++ b/public/index/index.handlebars
@@ -18,7 +18,7 @@
 
                 <h5>Agregar los datos de producto</h5>
                 <br>
-
+                 <form id="form-product">
                 <div class="form-group">
                     <label>Title</label>
                     <input id="title" type="text" class="form-control" name="title" placeholder="Agregar Titulo" required>
@@ -34,6 +34,7 @@
 
                 <br>
                 <button id="submit" type="submit" class="btn btn-primary">Agregar Producto</button>
+                </form>
             <br><br><br>
             {{> productTable}}
             {{> chat}}
